--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GPTCheck_Server",
+  "name": "gptcheck-server",
   "version": "0.0.1",
   "description": "Client-Side of Checker for GPT-Generated Text",
   "main": "dist/index.js",
