--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+fine_tuned_deberta/* filter=lfs diff=lfs merge=lfs -text
