--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "comfy-tslint": "^0.1.9",
     "copy-webpack-plugin": "^5.0.1",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.11.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "ignore-styles": "^5.0.1",
@@ -34,6 +34,7 @@
     "ts-loader": "^9.4.1",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.8.4",
+    "typescript-plugin-css-modules": "^5.1.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
